# power_msgs

./: CHANGELOG.rst  CMakeLists.txt  package.xml
msg/: BatteryState.msg  BatteryStatus.msg  BreakerState.msg
