<package>
  <name>power_msgs</name>
  <version>0.4.2</version>
  <description>
    ROS messages for power measurement and breaker control.
  </description>

  <author>Michael Ferguson</author>
  <maintainer email="eric.relson@zebra.com">Eric Relson</maintainer>
  <maintainer email="russell.toris@zebra.com">Russell Toris</maintainer>
  <maintainer email="opensource@fetchrobotics.com">Fetch Robotics Open Source Team</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/power_msgs</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
